--- a/scheduler/templates/scheduler/create.html
+++ b/scheduler/templates/scheduler/create.html
@@ -7,7 +7,7 @@
 
 <form action="{% url 'scheduler:create' %}" method="post">
     {% csrf_token %}
-    {{form}}
+    {{formset}}
     <input type="submit" value="Login">
 </form>
 
