--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -1,11 +1,63 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" ></script>
     </head>
 
     <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">lhoraire</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link active" aria-current="page" href="#">Dashboard</a>
+                  <a class="nav-link" href="#">Settings</a>
+                  <a class="nav-link" href="#">Log Out</a>
+                </div>
+              </div>
+              <button class="btn btn-outline-success me-2" type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Add New Task</button>
+            </div>
+          </nav>
         {% block content %}
         {% endblock %}
+
+        <!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <form action="{% url 'scheduler:create' %}" method="post">
+        <div class="modal-body">
+                {% csrf_token %}
+                {% for form in formset %}
+                {% for field in form %}
+                <div class="mb-3">
+                    {{ field.errors }}
+                    <label class="form-label" for="" >{{field.label_tag}}</label>
+                     {{ field }}
+                </div>
+                {% endfor %}
+                {% endfor %}
+
+
+                <!-- <input type="submit" value="Login"> -->
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="submit" class="btn btn-primary">Understood</button>
+            </div>
+        </form>
+      </div>
+    </div>
+  </div>
     </body>
+
 </html>
