--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,7 +1,7 @@
 {% extends 'base_layout.html' %}
 
 
-{% block content %}
+{% block body %}
 <h1>Login</h1>
 
 <form action="{% url 'accounts:login' %}" method="post">
