--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -1,7 +1,7 @@
 {% extends 'base_layout.html' %}
 
 
-{% block content %}
+{% block body %}
 <h1>Signup</h1>
 
 <form action="/accounts/signup" method="post">
