--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -4,6 +4,8 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" ></script>
+        {% block extrastyle%}
+        {% endblock %}
     </head>
 
     <body>
@@ -15,49 +17,28 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="#">Dashboard</a>
+                    {% if user.is_authenticated %}
+                  <a class="nav-link active" aria-current="page" href="{% url 'scheduler:index' %}">Dashboard</a>
+                  <a class="nav-link" href="#">All Tasks</a>
                   <a class="nav-link" href="#">Settings</a>
-                  <a class="nav-link" href="#">Log Out</a>
+                  <a class="nav-link" href="{% url 'accounts:logout' %}">Log Out</a>
+                  {% endif %}
                 </div>
               </div>
+              {% if user.is_authenticated %}
               <button class="btn btn-outline-success me-2" type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Add New Task</button>
+              {% endif %}
             </div>
           </nav>
-        {% block content %}
+        {% block create_modal %}
+        {% endblock create_modal%}
+
+        {% block body %}
         {% endblock %}
 
-        <!-- Modal -->
-<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <form action="{% url 'scheduler:create' %}" method="post">
-        <div class="modal-body">
-                {% csrf_token %}
-                {% for form in formset %}
-                {% for field in form %}
-                <div class="mb-3">
-                    {{ field.errors }}
-                    <label class="form-label" for="" >{{field.label_tag}}</label>
-                     {{ field }}
-                </div>
-                {% endfor %}
-                {% endfor %}
-
-
-                <!-- <input type="submit" value="Login"> -->
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="submit" class="btn btn-primary">Understood</button>
-            </div>
-        </form>
-      </div>
-    </div>
-  </div>
+        {% block extrascript %}
+        {% endblock %}
+        
     </body>
 
 </html>
