--- a/scheduler/templates/scheduler/dashboard.html
+++ b/scheduler/templates/scheduler/dashboard.html
@@ -15,6 +15,7 @@
   overflow: scroll;
   /* max-width: 100%; */
     background-color: #f5f5f5;
+    flex-grow: 1;
 }
 
 .column-container {
@@ -41,6 +42,11 @@
     font-size: 10px;
 }
 
+body, html{
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
 
 </style>
 {% endblock %}
@@ -49,6 +55,19 @@
 {% block body %}
 <!-- <body> -->
     <h5>Hello {{ userinfo.user }}</h5>
+
+    <div class="cards container">
+        <ol class="list-group list-group-numbered">
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div class="fw-bold">Subheading</div>
+                Cras justo odio
+              </div>
+              <span class="badge bg-primary rounded-pill">14</span>
+            </li>
+            
+          </ol>
+    </div>
 
     <div class="schedule-graph">
         {% for day, data in schedule.items %}
