--- a/scheduler/templates/scheduler/user_info.html
+++ b/scheduler/templates/scheduler/user_info.html
@@ -2,11 +2,16 @@
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
-        
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
 
-    <body style="display: flex;">
-        <div class="container" style="width:600px; display: flex; flex:0 0 600; flex-direction: column; justify-content: center;">
+    <body style="display: flex; flex-direction: column;">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">lhoraire</a>
+            </div>
+          </nav>
+        <div class="container" style="width:600px; display: flex; flex:0 0 600; flex-direction: column; justify-content: center; margin-top: 20px;">
             <div class="alert alert-success" role="alert">
                 Account has been successfully created!
               </div>
@@ -23,5 +28,9 @@
                 <button type="submit" class="btn btn-outline-primary">Save</button>
         </form>
     </div>
+
+    <script>
+        $('#time_zone_select option:contains(\"' + Intl.DateTimeFormat().resolvedOptions().timeZone + '\")').prop('selected', true)
+    </script>
     </body>
 </html>
