--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -10,6 +11,7 @@
     </head>
 
     <body>
+        <!-- <img src="{% static 'icon1.svg' %}"/> -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">lhoraire</a>
