--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -12,7 +12,7 @@
 
     <body>
         <!-- <img src="{% static 'icon1.svg' %}"/> -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">lhoraire</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,14 +22,37 @@
                 <div class="navbar-nav">
                     {% if user.is_authenticated %}
                   <a class="nav-link active" aria-current="page" href="{% url 'scheduler:index' %}">Dashboard</a>
-                  <a class="nav-link" href="#">All Tasks</a>
+                  <a class="nav-link" href="{% url 'scheduler:edit' %}">All Tasks</a>
                   <a class="nav-link" href="#">Settings</a>
                   <a class="nav-link" href="{% url 'accounts:logout' %}">Log Out</a>
                   {% endif %}
                 </div>
               </div>
               {% if user.is_authenticated %}
-              <button class="btn btn-outline-success me-2" type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Add New Task</button>
+              
+              <a tabindex="0" role="button" class="btn btn-outline-secondary position-relative" style="margin-right: 20px;"
+              data-bs-toggle="popover" title="Unschedulable Tasks" data-bs-html="true" data-bs-content="
+              {% if to_reschedule %}
+                {% for task, hours in to_reschedule.items %}
+                <ul class='list-group'>
+                  <li class='list-group-item d-flex justify-content-between align-items-center'>
+                    {{task}}
+                    <span class='badge bg-primary rounded-pill'>{{ hours|readable_hrs }}</span>
+                  </li>
+                </ul>
+                {% endfor %}
+              {% else %}
+              Tasks that are unshedulable because of the set limitatiosn will be found here
+              {% endif %}
+              ">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-subtract" viewBox="0 0 16 16">
+                <path d="M0 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v2h2a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2v-2H2a2 2 0 0 1-2-2V2zm2-1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H2z"/>
+              </svg>
+              <span class="position-absolute top-0 start-100 translate-middle p-2 border-light {% if to_reschedule %} bg-danger border rounded-circle {% endif %}">
+                <span class="visually-hidden">New alerts</span>
+              </span>
+            </a>
+              <button class="btn btn-outline-primary me-2" type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Add New Task</button>
               {% endif %}
             </div>
           </nav>
@@ -41,7 +64,16 @@
 
         {% block extrascript %}
         {% endblock %}
-        
+        <script>
+          var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
+var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
+  return new bootstrap.Popover(popoverTriggerEl)
+})
+
+// var popover = new bootstrap.Popover(document.querySelector('.popover-dismiss'), {
+//   trigger: 'focus'
+// })
+        </script>
     </body>
 
 </html>
