--- a/scheduler/templates/scheduler/dashboard.html
+++ b/scheduler/templates/scheduler/dashboard.html
@@ -32,7 +32,7 @@
 }
 
 {% if to_reschedule %}
-.column-container:hover > a {
+.column-container:hover > .add-task {
     display: block;
 }
 {% endif %}
@@ -73,33 +73,11 @@ body, html{
 
 {% block body %}
 <!-- <body> -->
-    {% comment %}
-    {% if todays_todo %}
-    {% endcomment %}
-    <div class="cards container-md">
-        <!-- {{todays_todo}} -->
-        <h6>{{ userinfo.user }}, your Todo list for today</h6>
-        <ol class="list-group list-group-numbered">
-            {% for taskid, hours in todays_todo.items %}
-            {% with taskinfo=tasks|get_item:taskid %}
-            <li class="list-group-item d-flex justify-content-between align-items-start">
-              <div class="ms-2 me-auto">
-                <div class="fw-bold">{{taskinfo.5}}</div>
-                {{taskinfo.7}}
-              </div>
-              <span class="badge bg-primary rounded-pill">{{ hours|readable_hrs }}</span>
-            </li>
-            {% endwith %}
-            {% endfor %}
-          </ol>
-    </div>
-    {% comment %}
-    {% endif %}
-    {% endcomment %}
+    
     <div class="schedule-graph">
         {% for day, data in schedule.items %}
         <div class="column-container">
-            <a role="button" class="btn btn-outline-secondary" 
+            <a role="button" class="btn btn-outline-secondary add-task" 
             style="position:absolute; top: 10%; left: 50%; transform: translate(-50%, 0);">+</a>
             <div class="column-bar" style="flex-grow: 1;">
                 <span class="day-month-text">{{day|to_day}}</span>
@@ -142,6 +120,49 @@ body, html{
     </div>
     <!-- <input class="form-check-input" type="checkbox" value="" id="defaultCheck1"> Toggle Days -->
 
+    <div class="container" style="margin-top: 20px; display: flex;"> 
+    <div class="cards container-md">
+        <h6>Today's Todo List</h6>
+        {% if todays_todo %}
+        <ol class="list-group">
+            {% for taskid, hours in todays_todo.items %}
+            {% with taskinfo=tasks|get_item:taskid %}
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div class="fw-bold">{{taskinfo.5}}</div>
+                <!-- {{taskinfo.7}} -->
+              </div>
+              <span class="badge bg-primary rounded-pill">{{ hours|readable_hrs }}</span>
+            </li>
+            {% endwith %}
+            {% endfor %}
+          </ol>
+          {%else%}
+          <p>You don't have any work to be done today!</p>
+          {% endif%}
+    </div>
+
+    <div class="cards container-md">
+        <h6>Upcoming Due Dates</h6>
+        {% if todays_todo %}
+        <ol class="list-group">
+            {% for taskid, hours in todays_todo.items %}
+            {% with taskinfo=tasks|get_item:taskid %}
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div class="fw-bold">{{taskinfo.5}}</div>
+                <!-- {{taskinfo.7}} -->
+              </div>
+              <!-- <span class="badge bg-primary rounded-pill">{{ hours|readable_hrs }}</span> -->
+            </li>
+            {% endwith %}
+            {% endfor %}
+          </ol>
+          {%else%}
+          <p>Due dates in the next 10 days will be found here.</p>
+          {% endif%}
+    </div>
+</div>
     
 
 <!-- </body> -->
