--- a/scheduler/templates/scheduler/dashboard.html
+++ b/scheduler/templates/scheduler/dashboard.html
@@ -31,11 +31,9 @@
   position: relative;
 }
 
-{% if to_reschedule %}
 .column-container:hover > .add-task {
     display: block;
 }
-{% endif %}
 
 .column-container > a {
     display: none;
@@ -78,7 +76,8 @@ body, html{
         {% for day, data in schedule.items %}
         <div class="column-container">
             <a role="button" class="btn btn-outline-secondary add-task" 
-            style="position:absolute; top: 10%; left: 50%; transform: translate(-50%, 0);">+</a>
+            style="position:absolute; top: 10%; left: 50%; transform: translate(-50%, 0);"
+            data-bs-toggle="modal" data-bs-target="#rescheduler-modal" data-bs-date="{{day}}" data-bs-extrahours="{{data.extra_hours}}">+</a>
             <div class="column-bar" style="flex-grow: 1;">
                 <span class="day-month-text">{{day|to_day}}</span>
             </div>
@@ -113,12 +112,20 @@ body, html{
                 <!-- {{ task }} : {{ hours }} -->
             {% endfor %}
                 <div class="column-bar">
-                    <span class="day-month-text">{{day|to_date}}</span>
+                    <span class="day-month-text">
+                        {% if data.extra_hours %}
+                        <i><u>{{day|to_date}}</u></i>
+                        {% else %}
+                        {{day|to_date}}
+                        {% endif %}
+                    </span>
                 </div>
         </div>
         {% endfor %}
     </div>
     <!-- <input class="form-check-input" type="checkbox" value="" id="defaultCheck1"> Toggle Days -->
+
+     <!-- Modal -->
 
     <div class="container" style="margin-top: 20px; display: flex;"> 
     <div class="cards container-md">
@@ -213,18 +220,38 @@ body, html{
             });
 
             $('.schedule-graph').children().eq(1).css('background-color','#C3E6FE');
-    });
+        });
 
-    $(window).on('resize', function(){
-        columnContainerCount(this)
-    });
+        $(window).on('resize', function(){
+            columnContainerCount(this)
+        });
+
+        var exampleModal = document.getElementById('rescheduler-modal')
+        exampleModal.addEventListener('show.bs.modal', function (event) {
+        // Button that triggered the modal
+        var button = event.relatedTarget
+        // Extract info from data-bs-* attributes
+        var date = button.getAttribute('data-bs-date')
+        var extra_hours = button.getAttribute('data-bs-extrahours')
+        // If necessary, you could initiate an AJAX request here
+        // and then do the updating in a callback.
+        //
+        // Update the modal's content.
+        var modalTitle = exampleModal.querySelector('.modal-title')
+        var dateInput = exampleModal.querySelector('.modal-body #id_date')
+        var extraHoursInput = exampleModal.querySelector('.modal-body #id_extra_hours')
+
+        modalTitle.textContent = 'Extra hours for ' + date
+        dateInput.value = date
+        extraHoursInput.value = parseFloat(extra_hours)
+        })
     
-        </script>
+    </script>
 {% endblock %}
 
 {% block create_modal %}
     <!-- Modal -->
-<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+<div class="modal fade" id="createTask" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 <div class="modal-dialog modal-dialog-scrollable">
   <div class="modal-content">
     <div class="modal-header">
@@ -256,4 +283,27 @@ body, html{
   </div>
 </div>
 </div>
+
+<div class="modal fade" id="rescheduler-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="staticBackdropLabel">Add Extra Hours for </h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <form action="{% url 'scheduler:rescheduler' %}" method="post">
+        <div class="modal-body">
+                {% csrf_token %}
+                <!-- <input type="hidden" name="date" value="" id="date"> -->
+                {{reschedule_form}}
+
+        </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="submit" class="btn btn-primary">Save</button>
+            </div>
+        </form>
+      </div>
+    </div>
+  </div>
 {% endblock %}
