--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -6,6 +6,16 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" ></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <style>
+          .footer{
+            width:100%;
+            display:flex;
+            background-color: gainsboro;
+            padding:20px;
+            justify-self: end;
+            /* margin-bottom: -10px; */
+          }
+        </style>
         {% block extrastyle%}
         {% endblock %}
     </head>
@@ -14,7 +24,10 @@
         <!-- <img src="{% static 'icon1.svg' %}"/> -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light" style="">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">lhoraire</a>
+              <a class="navbar-brand" href="#">
+                <img src="{% static 'main/img/icon2.png' %}" alt="" width="30" height="30" class="d-inline-block align-text-top">
+                lhoraire
+              </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -82,6 +95,10 @@
 //   trigger: 'focus'
 // })
         </script>
+
+        <div class="footer">
+          lhoraire - Work and Time Management tool
+        </div>
     </body>
 
 </html>
