--- a/accounts/templates/accounts/accounts.html
+++ b/accounts/templates/accounts/accounts.html
@@ -1,22 +1,67 @@
 {% extends 'base_layout.html' %}
 
+{% load static %}
+
 {% block extrastyle %}
 <style>
-body{
+html, body{
     display: flex; flex-direction: column;
+    height: 100%;
     }
+
+body{
+    min-height: 100%;
+}
+
+.outer-container{
+    flex:1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-image: url("{% static 'accounts/img/background.png' %}");
+    background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center
+}
+
+
+.container{
+    width:500px; 
+    display: flex; 
+    /* flex:0 0 400;  */
+    flex-direction: column;
+    justify-content: center; 
+    margin-top: 20px; 
+    align-items: center;
+    /* background-color: aliceblue; */
+    /* backdrop-filter: blur(2px); */
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    padding: 50px;
+    border-radius: 10px;
+    border-color: azure;
+    border-width: 5px;
+    border-style: solid;
+}
 </style>
 {% endblock %}
 
 {% block body %}
-<div class="container" style="width:600px; display: flex; flex:0 0 600; flex-direction: column; justify-content: center; margin-top: 20px; align-items: center;">
+<div class="outer-container">
+<div class="container">
     {% if request.path == '/accounts/login' %}
-<h1>Login</h1>
+<h1>Welcome Back!</h1>
     {% elif request.path == '/accounts/signup' %}
     <h1>Sign Up</h1>
     {% endif %}
 
 <form action="{{request.path}}" method="post">
+    {% for message in messages %}
+    <div class="alert alert-danger" role="alert">
+        {{message}}
+    </div>
+    {% endfor %}
+
     {% csrf_token %}
     {% for field in form %}
         <div class="mb-3">
@@ -39,6 +84,6 @@ body{
     <a href="/accounts/login">Or login here</a>
     {% endif %}
 </div>
-
+</div>
 
 {% endblock %}
