--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -25,7 +25,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light" style="">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">
-                <img src="{% static 'main/img/icon2.png' %}" alt="" width="30" height="30" class="d-inline-block align-text-top">
+                <!-- <img src="{% static 'main/img/icon2.png' %}" alt="" width="30" height="30" class="d-inline-block align-text-top"> -->
                 lhoraire
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
