--- a/accounts/templates/accounts/accounts.html
+++ b/accounts/templates/accounts/accounts.html
@@ -26,7 +26,7 @@ body{
 
 
 .container{
-    width:500px; 
+    /* width:500px;  */
     display: flex; 
     /* flex:0 0 400;  */
     flex-direction: column;
