--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -1,18 +1,43 @@
 {% load static %}
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+        <title>lhoraire</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" ></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <style>
+          body, html{
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+          }
+          body{
+            min-height: 100%;
+          }
+
+          #n2{
+            display: none;
+          }
+
+          @media only screen 
+          and (min-width : 992px) {
+              #n2{
+                  display:block;
+              }
+              #n1{
+                  display:none;
+              }
+          }
           .footer{
             width:100%;
             display:flex;
             background-color: gainsboro;
-            padding:20px;
+            padding:10px;
             justify-self: end;
+            margin-top: auto;
             /* margin-bottom: -10px; */
           }
         </style>
@@ -28,21 +53,48 @@
                 <!-- <img src="{% static 'main/img/icon2.png' %}" alt="" width="30" height="30" class="d-inline-block align-text-top"> -->
                 lhoraire
               </a>
+              {% if user.is_authenticated and not user_not_complete %}
+              <nav id="n1">
+               <a tabindex="0" role="button" class="btn btn-outline-secondary position-relative" style="margin-right: 20px;"
+              data-bs-toggle="popover" title="Unschedulable Tasks" data-bs-html="true" data-bs-sanitize="false" data-bs-content="
+              {% if to_reschedule %}
+              <div>
+                <ul class='list-group'>
+                  {% for task, hours in to_reschedule.items %}
+                  {% with taskinfo=tasks|get_item:task %}
+                  <li class='list-group-item d-flex justify-content-between align-items-center'>
+                    {{taskinfo.5}}
+                    <span class='badge bg-primary rounded-pill'>{{ hours|readable_hrs }}</span>
+                  </li>
+                  {% endwith %}
+                  {% endfor %}
+                </ul>
+              </div>
+              {% else %}
+              Tasks that are unshedulable because of the set limitatiosn will be found here
+              {% endif %}
+              ">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-subtract" viewBox="0 0 16 16">
+                <path d="M0 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v2h2a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2v-2H2a2 2 0 0 1-2-2V2zm2-1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H2z"/>
+              </svg>
+              <span class="position-absolute top-0 start-100 translate-middle p-2 border-light {% if to_reschedule %} bg-danger border rounded-circle {% endif %}">
+                <span class="visually-hidden">New alerts</span>
+              </span>
+            </a>
+              <button class="btn btn-outline-primary me-2" type="button" data-bs-toggle="modal" data-bs-target="#createTask">Add New Task</button>
+            </nav>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    {% if user.is_authenticated %}
-                  <a class="nav-link active" aria-current="page" href="{% url 'scheduler:index' %}">Dashboard</a>
-                  <a class="nav-link" href="{% url 'scheduler:edit' %}">All Tasks</a>
-                  <a class="nav-link" href="#">Settings</a>
+                  <a class="nav-link {% if request.path == '/scheduler/' %} active {% endif %}" aria-current="page" href="{% url 'scheduler:index' %}">Dashboard</a>
+                  <a class="nav-link {% if request.path == '/scheduler/edit' %} active {% endif %}" href="{% url 'scheduler:edit' %}">All Tasks</a>
+                  <a class="nav-link {% if request.path == '/scheduler/settings' %} active {% endif %}" href="{% url 'scheduler:settings' %}">Settings</a>
                   <a class="nav-link" href="{% url 'accounts:logout' %}">Log Out</a>
-                  {% endif %}
                 </div>
               </div>
-              {% if user.is_authenticated %}
-              
+              <nav id="n2">
               <a tabindex="0" role="button" class="btn btn-outline-secondary position-relative" style="margin-right: 20px;"
               data-bs-toggle="popover" title="Unschedulable Tasks" data-bs-html="true" data-bs-sanitize="false" data-bs-content="
               {% if to_reschedule %}
@@ -70,6 +122,7 @@
               </span>
             </a>
               <button class="btn btn-outline-primary me-2" type="button" data-bs-toggle="modal" data-bs-target="#createTask">Add New Task</button>
+            </nav>
               {% endif %}
             </div>
           </nav>
@@ -79,6 +132,20 @@
         {% block body %}
         {% endblock %}
 
+        {% if messages %}
+        {% for message in messages %}
+        <div id="errorToast"  class="toast align-items-center text-white bg-danger border-0 position-fixed" 
+        role="alert" aria-live="assertive" aria-atomic="true" style="bottom: 5px; right: 5px;">
+          <div class="d-flex">
+            <div class="toast-body">
+              {{message}}
+            </div>
+            <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+          </div>
+        </div>
+        {% endfor %}
+        {% endif %}
+
         {% block extrascript %}
         {% endblock %}
         <script>
@@ -86,6 +153,11 @@
           var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
             return new bootstrap.Popover(popoverTriggerEl)
           });
+
+          var errorToast = document.getElementById('errorToast')
+          var toast = new bootstrap.Toast(errorToast)
+
+          toast.show()
         //   $(document).ready(function(){
         //   $('a').click(()=>{
         //     alert('hi')
@@ -97,7 +169,9 @@
         </script>
 
         <div class="footer">
-          lhoraire - Work and Time Management tool
+          <span>
+            lhoraire - Work and Time Management tool
+          </span>
         </div>
     </body>
 
