--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -54,7 +54,7 @@
                 lhoraire
               </a>
               {% if user.is_authenticated and not user_not_complete %}
-              <div style="display: flex;">
+              <div style="display: flex; margin-left:auto">
               <nav id="n1">
                <a tabindex="0" role="button" class="btn btn-outline-secondary position-relative" style="margin-right: 20px;"
               data-bs-toggle="popover" title="Unschedulable Tasks" data-bs-html="true" data-bs-sanitize="false" data-bs-content="
